--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,24 @@ php:
   - 5.6
   - hhvm
 
+matrix:
+  include:
+    - php: 5.3
+      env: dependencies=lowest
+    - php: 5.4
+      env: dependencies=lowest
+    - php: 5.5
+      env: dependencies=lowest
+    - php: 5.6
+      env: dependencies=lowest
+    - php: hhvm
+      env: dependencies=lowest
+
 before_script:
   - composer self-update
-  - composer install --dev
+  - if [ -z "$dependencies" ]; then travis_retry composer install; fi;
+  - if [ "$dependencies" = "lowest" ]; then travis_retry composer update --prefer-lowest; fi;
+  - composer show -i
 
 script:
   - phpunit --coverage-text
